--- a/contact.html
+++ b/contact.html
@@ -162,12 +162,12 @@
           Email: ericcjameson@gmail.com<br />
           Phone: (970)-980-8519<br />
         </div>
-        <a href="tel:+1-970-980-8519" class="button connection">Call Me! </a>
-        <br />
-        <a href="skype:cruebeedoobie" class="button connection">Skype Me! </a>
-        <a href="mailto:ericcjameson@gmail.com" class="button connection"
-          >Email Me!
-        </a>
+
+        <div class="cv-container">
+          <a href="files/resume.pdf" class="button" download target="_blank">
+            Download My Resume
+          </a>
+        </div>
       </div>
     </section>
 
