--- a/thank-you.html
+++ b/thank-you.html
@@ -44,7 +44,7 @@
     </div>
     <script>
       setTimeout(function () {
-        window.location.href = 'http://cruejameson.com/index.html';
+        window.location.href = 'https://cruejameson.com/index.html';
       }, 3000);
     </script>
   </body>
