--- a/work.html
+++ b/work.html
@@ -25,13 +25,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
 
-    <link
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/styles_version2.0.css"
-    />
+    /> -->
   </head>
 
   <body>
@@ -67,78 +67,97 @@
 
     <div class="content">
       <section class="project-container">
+
         <h1 class="secondary-title">
           My <span class="crue-span">Projects</span>
         </h1>
-        <div class="grid">
-          <div class="grid__item">
-            <h2>my<span class="crue-span">Flix</span></h2>
-            <p class="proj-desc">
-              I designed and created both the frontend and backend for a movie
-              lover's app. Here users can create profiles, view a list of movies
-              with details about the movies, their directors, and genres and
-              more!
+
+        <div class="grid-1">
+          <div class="grid-1__item">
+            <h2 class="project-title-left">
+              my<span class="crue-span">Flix</span>
+            </h2>
+            <p class="proj-desc-left">
+              My first full front-to-back web application created with React. This one
+              is for the movie lovers out there. Here users can create profiles,
+              view a list of movies with details about the movies, their
+              directors, and genres and more! Created with React this application is
+              highly scalable and flexible.
             </p>
-            <a class="button projects" href="cruebeeflix.html">Mmmmovies!</a>
+            <a class="button projects" href="cruebeeflix.html">View Project</a>
           </div>
-          <div class="grid__item">
-            <h2>Quiz-<span class="crue-span">tron</span></h2>
-            <p class="proj-desc">
-              Quiztron was developed to test out some of the features that
-              Angular has to offer. This project introduced new technologies and
-              methods. Here users can select from a few short quizzes and view
-              the results of their quizzes.
-            </p>
-            <a class="button projects" href="quiztron.html">Take a quizzy!</a>
+          <div class="grid-1_img__item">
+            <img style="width: 100%;" src="img/my-main.jpeg" alt="myFlix" />
           </div>
-          <div class="grid__item">
-            <h2>Member-<span class="crue-span">berry</span></h2>
-            <p class="proj-desc">
-              A simple To-Do app to help you member! I developed this
-              application with Vue.js, and experimented a little with Vue
-              Material design to style the application. This project helped to
-              solidify the understanding of documentation.
-            </p>
-            <a class="button projects" href="memberberry.html"
-              >You member right?</a
-            >
+        </div>
+
+        <div class="grid-2">
+          <div class="grid-2_img__item">
+            <img style="width: 100%;" src="img/chatPics6.png" alt="chatterBox" />
           </div>
-          <div class="grid__item">
-            <h2>Meet-<span class="crue-span">em</span>-up</h2>
-            <p class="proj-desc">
-              Check out the meetemup app! This app interacts with the meetup
-              API. Here users can login with OAUTH, and browse a list of events
-              in their area, they can also search different locations for
-              events.
-            </p>
-            <a href="meetemup.html" class="button projects">Meetemup app</a>
-          </div>
-          <div class="grid__item">
-            <h2>Poke-<span class="crue-span">dex</span></h2>
-            <p class="pokedex-desc">
-              This application is all about HTML5, CSS, jQuery, and JavaScript.
-              The styling for this app was created with the help Bootstrap, and
-              interacts with the Pokemon API. This project took a deep dive into
-              advanced JavaScript methods.
-            </p>
-            <a href="poke-tracker.html" class="button projects">Pokedex</a>
-          </div>
-          <div class="grid__item">
-            <h2>Chatter<span class="crue-span">Box</span></h2>
-            <p class="proj-desc">
+          <div class="grid-2__item">
+            <h2 class="project-title-left">
+              Chatter<span class="crue-span">Box</span>
+            </h2>
+            <p class="proj-desc-left">
               ChatterBox is a React Native project exploring the process of
               creating and implementing code for both iPhone, and Android users
               at the same time! This advanced application proved to be both
               difficult and highly rewarding.
             </p>
-            <a class="button projects" href="#">Project on the way!</a>
+            <a class="button projects" href="chatterbox.html">View Project</a>
           </div>
+        </div>
+
+        <div class="grid-1">
+          <div class="grid__item">
+            <h2 class="project-title-left">
+              Meet-<span class="crue-span">Em</span>-Up
+            </h2>
+            <p class="proj-desc-left">
+              Meet-Em-Up is a progressive web application built for the modern age!
+              In today's uncertain times, connecting with people is more important than
+              ever! Even though this rampant virus and political pressures are forcing more
+              and more of us to distance ourselves from others. Meet-Em-Up hopes to solve
+              this problem by connecting people with digital meetups being organized in
+              a user's area!
+            </p>
+            <a class="button projects" href="meetemup.html">View Project</a>
+          </div>
+          <div class="grid-1_img__item">
+            <img style="width: 100%;" src="img/meetemup.png" alt="poke-dex" />
+          </div>
+        </div>
+
+        <div class="grid-2">
+          <div class="grid-2_img__item">
+            <img style="width: 100%;" src="img/poke-main.jpeg" alt="poke-dex" />
+          </div>
+          <div class="grid-2__item">
+            <h2 class="project-title-left">
+              Poke-<span class="crue-span">Dex</span>
+            </h2>
+            <p class="proj-desc-left">
+              This application is all about HTML5, CSS, jQuery, and JavaScript.
+              The styling for this app was created with the help Bootstrap, and
+              interacts with the Pokemon API. This project took a deep dive into
+              advanced JavaScript methods.
+            </p>
+            <a class="button projects" href="poke-tracker.html">View Project</a>
+          </div>
+        </div>
+
         </div>
       </section>
     </div>
 
     <div class="foot-wrap">
       <footer class="page-footer">
+        <div class="cv-container">
+          <a href="files/resume.pdf" class="button" download target="_blank">
+            Download My Resume
+          </a>
+        </div>
         <p>Find Me On</p>
         <div class="social-media">
           <a href="https://github.com/Cruebee" target="_blank"
